--- a/TouchEffectSample/TouchViewPage.xaml
+++ b/TouchEffectSample/TouchViewPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:touch="clr-namespace:TouchEffect;assembly=TouchEffect"
-             x:Class="TouchEffectSample.SamplePage"
+             x:Class="TouchEffectSample.TouchViewPage"
              BackgroundColor="White"
              Title="PRESIDENT'S NUCLEAR BUTTON">
     <StackLayout>
