--- a/TouchEffectSample/TouchColorViewPage.xaml
+++ b/TouchEffectSample/TouchColorViewPage.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:controls="clr-namespace:TouchEffect.Controls;assembly=TouchEffect"
+             xmlns:touch="clr-namespace:TouchEffect;assembly=TouchEffect"
              x:Class="TouchEffectSample.TouchColorViewPage"
              BackgroundColor="White"
              Title="TouchColorViewPage">
     <StackLayout>
-       <controls:TouchColorView
-            RegularColor="Black"
-            PressedColor="Maroon"
+       <touch:TouchView
+            RegularBackgroundColor="Black"
+            PressedBackgroundColor="Maroon"
             Padding="10, 5"
             VerticalOptions="CenterAndExpand"
             HorizontalOptions="CenterAndExpand"
@@ -17,6 +17,6 @@
             <Label Text="CLICK ME" 
                    TextColor="White" 
                    FontSize="60"/>
-        </controls:TouchColorView>
+        </touch:TouchView>
     </StackLayout>
 </ContentPage>
