--- a/TouchEffectSample/TouchColorViewPage.xaml
+++ b/TouchEffectSample/TouchColorViewPage.xaml
@@ -10,8 +10,8 @@
             RegularBackgroundColor="Green"
             PressedBackgroundColor="Red"
             PressedOpacity="1"
-            FadeDuration="500"
-            RecoverDuration="500"
+            PressedAnimationDuration="500"
+            RegularAnimationDuration="500"
             Padding="10, 5"
             VerticalOptions="CenterAndExpand"
             HorizontalOptions="CenterAndExpand"
