Added Rotation, RotationX, RotationY, TranslationX, TranslationY touch support

--- a/TouchEffectSample/TouchColorViewPage.xaml
+++ b/TouchEffectSample/TouchColorViewPage.xaml
@@ -12,6 +12,11 @@
             PressedOpacity="1"
             PressedScale="1.2"
             RippleCount="1"
+            PressedRotation="10"
+            PressedRotationX="15"
+            PressedRotationY="15"
+            PressedTranslationX="5"
+            PressedTranslationY="5"
             PressedAnimationDuration="500"
             RegularAnimationDuration="500"
             Padding="10, 5"
