--- a/TouchEffectSample/TouchImagePage.xaml
+++ b/TouchEffectSample/TouchImagePage.xaml
@@ -3,17 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:touch="clr-namespace:TouchEffect;assembly=TouchEffect"
              x:Class="TouchEffectSample.TouchImagePage"
+             x:Name="root"
              BackgroundColor="White"
              Title="TouchImagePage">
     <StackLayout>
-       <touch:TouchView
+       <touch:TouchImage
             VerticalOptions="CenterAndExpand"
             HorizontalOptions="CenterAndExpand"
             HeightRequest="250"
             WidthRequest="250"
-            PressedOpacity="1"
             RegularBackgroundImageSource="button"
             PressedBackgroundImageSource="button_pressed"
-            Completed="Handle_TouchCompleted" />
+            touch:TouchEff.Command="{Binding Command, Source={x:Reference root}}"
+            />
     </StackLayout>
 </ContentPage>
