--- a/TouchEffectSample/TouchColorViewPage.xaml
+++ b/TouchEffectSample/TouchColorViewPage.xaml
@@ -6,27 +6,28 @@
              BackgroundColor="White"
              Title="TouchColorViewPage">
     <StackLayout>
-       <touch:TouchView
-            RegularBackgroundColor="Green"
-            PressedBackgroundColor="Red"
-            PressedOpacity="1"
-            PressedScale="1.2"
-            RippleCount="1"
-            PressedRotation="10"
-            PressedRotationX="15"
-            PressedRotationY="15"
-            PressedTranslationX="5"
-            PressedTranslationY="5"
-            PressedAnimationDuration="500"
-            RegularAnimationDuration="500"
+       <ContentView
+            touch:TouchEff.RegularBackgroundColor="Green"
+            touch:TouchEff.PressedBackgroundColor="Red"
+            touch:TouchEff.PressedScale="1.2"
+            touch:TouchEff.RippleCount="1"
+            touch:TouchEff.PressedRotation="10"
+            touch:TouchEff.PressedRotationX="15"
+            touch:TouchEff.PressedRotationY="15"
+            touch:TouchEff.PressedTranslationX="5"
+            touch:TouchEff.PressedTranslationY="5"
+            touch:TouchEff.PressedAnimationDuration="500"
+            touch:TouchEff.RegularAnimationDuration="500"
             Padding="10, 5"
             VerticalOptions="CenterAndExpand"
-            HorizontalOptions="CenterAndExpand"
-            Completed="Handle_TouchCompleted">
+            HorizontalOptions="CenterAndExpand">
+            <ContentView.Effects>
+                <touch:TouchEff Completed="Handle_TouchCompleted" />
+            </ContentView.Effects>
 
             <Label Text="CLICK ME" 
                    TextColor="Black" 
                    FontSize="60"/>
-        </touch:TouchView>
+        </ContentView>
     </StackLayout>
 </ContentPage>
