--- a/TouchEffectSample/TouchFadeViewPage.xaml
+++ b/TouchEffectSample/TouchFadeViewPage.xaml
@@ -6,21 +6,26 @@
              BackgroundColor="White"
              Title="TouchFadeViewPage">
     <StackLayout>
-       <touch:TouchView
-            PressedAnimationDuration="800"
-            RegularAnimationDuration="800"
-            PressedScale="0.9"
-            RippleCount="-1"
+       <ContentView
+            touch:TouchEff.PressedAnimationDuration="800"
+            touch:TouchEff.RegularAnimationDuration="800"
+            touch:TouchEff.PressedScale="0.9"
+            touch:TouchEff.PressedOpacity="0.6"
+            touch:TouchEff.RippleCount="-1"
+            
             Padding="10, 5"
             BackgroundColor="Black"
             VerticalOptions="CenterAndExpand"
-            HorizontalOptions="CenterAndExpand"
-            Completed="Handle_TouchCompleted">
-
+            HorizontalOptions="CenterAndExpand">
+            
+            <ContentView.Effects>
+                <touch:TouchEff Completed="Handle_TouchCompleted"/>
+            </ContentView.Effects>
+            
             <Label Text="CLICK ME" 
                    TextColor="White" 
                    FontSize="60"/>
             
-        </touch:TouchView>
+        </ContentView>
     </StackLayout>
 </ContentPage>
